# Stegi

./: .floo  .gitignore  .travis.yml  Cargo.toml  Cargo.toml~  README.md  TODO.md  doku.tex  expand  rustfmt.toml
doku/: _TZ_16988-mate.aux  _TZ_16988-mate.bcf  _TZ_16988-mate.dvi  _TZ_16988-mate.run.xml  _TZ_16988-mate.tex  _TZ_28660-mate.aux  _TZ_28660-mate.bcf  _TZ_28660-mate.run.xml  _TZ_28660-mate.tex  doku.aux  doku.bcf  doku.dvi  doku.out  doku.run.xml  doku.tex  doku.toc  ref.bib
examples/: test.st
exercise/: Aufgabe1_HalloWelt.md  Aufgabe2_Variabeln.md  Aufgabe3_PqFormel.md  Aufgabe4_Schleifen.md  Aufgabe_Basics.md  Aufgabenblatt_Duden.md
resources/: start.st
src/: ast.rs  cxt.rs  errors.rs  formatter.rs  interp.rs  lexer.rs  linter.rs  lowering.rs  main.rs  parser.rs  session.rs  typer.rs
