[package]
name = "stegi"
version = "0.1.0"
authors = ["Simon Kunz <simon.kunz21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
failure = "0.1.7"
itertools = "0.9"
derivative = "2.0.2"
scopeguard = "1.1.0"
colored = "1.9"