[package]
name = "stegi"
version = "0.1.0"
authors = ["Simon Kunz <simon.kunz21@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
debug = true
codegen-units = 1
opt-level = 3

[dev-dependencies]
pretty_assertions = "0.6.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
failure = "0.1.7"
itertools = "0.9"
derivative = "2.1.1"
colored = "1.9"
ngrammatic = "0.2.0"
unicode_reader = "1.0.0"
clap = "3.0.0-beta.1"
